--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-
+	<header></header>
 
 	<h1>ТОП 3 ЛУДШИХ МЕСТ ДЛЯ КУРОРТА </h1>
-	<ol>
+	</header>
+	<main>
 		<li>
 			место
 		</li>
@@ -24,6 +25,7 @@
 		<a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B8%D1%80%D0%B0%D0%BC%D0%B8%D0%B4%D1%8B_%D0%93%D0%B8%D0%B7%D1%8B">вся
 			информация</a>
 
+
 		<li>
 			место
 		</li>
@@ -35,6 +37,7 @@
 			традиций и вечной любви, объектом паломничества.</p>
 		<a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D0%B4%D0%B6-%D0%9C%D0%B0%D1%85%D0%B0%D0%BB">вся информация</a>
 
+
 		<li>
 			место
 		</li>
@@ -45,12 +48,14 @@
 			которых является истинным произведением искусства. Богатый торговый город смог сохранить в своей архитектуре
 			все самое лучшее, что было построено в нем на протяжении веков, а разветвленная система каналов придает Венеции
 			неповторимое очарование и оригинальность.</p>
-	</ol>
-	<a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BD%D0%B5%D1%86%D0%B8%D1%8F">вся информация</a><br>
-	<a href="#top">Наврех</a>
+		</ol>
+		<a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BD%D0%B5%D1%86%D0%B8%D1%8F">вся информация</a><br>
+	</main>
+	<footer>
+		<a href="#top">Наврех</a>
 
 
-
+	</footer>
 
 </body>
 
