--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BD%D0%B5%D1%86%D0%B8%D1%8F">вся информация</a><br>
 	</main>
 	<footer>
-		<a href="#top">Навeрех</a>
+		<a href="#top">Навeрх</a>
 
 
 	</footer>
